--- a/render.yml
+++ b/render.yml
@@ -1,16 +1,14 @@
-# render.yaml
-
 services:
   - type: web_service
     name: fastapi-roaster
     env: docker
-    branch: main           # or whichever branch you deploy
+    branch: main
     plan: free
-    disk: 1                # 1 GB disk for SQLite persistence
-    buildCommand: ""       # use Dockerfile
+    disk: 1            # 1 GB persistent disk
+    buildCommand: ""   # uses Dockerfile at repo root
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port 8000
     envVars:
-      - key: DATABASE_URL
-        value: sqlite+aiosqlite:///data/roaster.db
       - key: PORT
         value: "8000"
+      - key: DATABASE_URL
+        value: sqlite+aiosqlite:///data/roaster.db
